syntax = "proto3";
option go_package = "src/proto";

import "google/protobuf/duration.proto";

service Kernel {
    rpc Session (stream ToServer) returns (stream ToClient);
}

message ToServer {
    oneof kind {
        EvaluateRequest evaluate = 1;
        PromptResponse prompt = 2;
        CacheResponse cache = 3;
        CancelEvaluate cancel = 4;
    }
}

message ToClient {
    oneof kind {
        Output output = 1;
        EvaluateResponse evaluate = 2;
        PromptRequest prompt = 3;
        CacheRequest cache = 4;
    }
}

message EvaluateRequest {
    string code = 1;
}

message EvaluateResponse {
    google.protobuf.Duration duration = 1;
    repeated EvaluateError errors = 2;
}

message EvaluateError {
    string message = 1;
    optional string stack = 2;
    optional LineAndColumn position = 3;
}

message LineAndColumn {
    int32 line = 1;
    int32 column = 2;
}

message Output {
    repeated Content content = 1;
}

message Content {
    string mime = 1;
    bytes value = 2;
}

message PromptRequest {
    optional string prompt = 1;
    optional string placeholder = 2;
    bool password = 3;
}

message PromptResponse {
    optional string value = 1;
}

message CacheRequest {
    string key = 1;
    optional string write = 2;
}

message CacheResponse {
    optional string value = 1;
}

message CancelEvaluate {}